Fix dropdown bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
 html {
   background-color: white;
   color: black;
-  height: 100dvh;  
+  height: 100dvh;
+  overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
